--- a/docs/Homo_Antecessor.css
+++ b/docs/Homo_Antecessor.css
@@ -18,20 +18,24 @@ h4{
     font-size: 20px;
 }
 
+div{
+    border: 5px solid black;
+    background-color: bisque;
+}
+
 body {
-    background-color: #518DC2;
+    /* background-color: #518DC2; */
     font-family: Times_New_Roman;
     border: 2px black;
     color: grey;
 }
 
 
-*{
-    border: 2px black;
-}
+
 
 .high{
     border: 2px black;
+    
 }
 /* I don't know why my borders are not showing up and are only showing when I put the "*" in the second to last section.
 
